--- a/INFERNO/raiva.css
+++ b/INFERNO/raiva.css
@@ -1,9 +1,20 @@
-.linkcabecalho{
+header a[href^='https'] {
     color: navy;
-    
+    font-size: larger;
 }
 
-.spantom{
+[src$='.jfif'] {
+    border: 1px solid red;
+    border-radius: 20px;
+    box-shadow: 2px;
+} 
+
+
+ul li [class~='vender'] + button{
     font-weight: bold;
+    background-color: red;
+}
+
+li {
     font-size: larger;
 }
